# ai-secretary

./: .env.example  app.py  pyproject.toml
.devcontainer/: devcontainer.json
secretary/: __init__.py  __main__.py  app.py  llm.py
